--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run genarate-data && nodemon main.js",
+    "dev": "node genarate-data.js && nodemon main.js",
     "start": "node main.js",
     "genarate-data": "node genarate-data.js"
   },
